--- a/Wiki/games.darkrepos.com/Dragon_Warrior_IV_(NES)_-_ROM_map.wikitext
+++ b/Wiki/games.darkrepos.com/Dragon_Warrior_IV_(NES)_-_ROM_map.wikitext
@@ -1,238 +1,235 @@
 {{rommap}}
-{{game|Dragon Warrior IV (NES)}}
+{{subpage}}
 
 =Dragon Warrior IV (NES) ROM Map=
 
-This ROM map documents the PRG ROM layout of Dragon Warrior IV (US version), based on disassembly analysis from the [https://github.com/TheAnsarya/dragon-warrior-4-info dragon-warrior-4-info] project.
+This ROM map documents the PRG ROM layout of Dragon Warrior IV (US version), based on disassembly analysis by TheAnsarya and the dragon-warrior-4-info project.
 
 ==ROM Information==
 
 {| class="wikitable"
 |-
-! Property !! Value
+!  Property  !!  Value
 |-
-| Title || Dragon Warrior IV
+|  Title  ||  Dragon Warrior IV
 |-
-| Region || US
+|  Region  ||  US
 |-
-| Size || 512KB PRG + 256KB CHR
+|  Size  ||  512KB PRG + 256KB CHR
 |-
-| Mapper || MMC5 (5)
+|  Mapper  ||  MMC5 (5)
 |-
-| Banks || 32 PRG banks (16KB each)
+|  Banks  ||  32 PRG banks (16KB each)
 |-
-| Header || 16 bytes (iNES)
-|-
-| CRC32 || <code>A5E6BAD5</code>
-|}
-
-==Memory Layout==
-
-The MMC5 mapper provides flexible bank switching:
-
-{| class="wikitable"
-|-
-! Address Range !! Size !! Description
-|-
-| $8000-$9FFF || 8KB || Switchable PRG bank (mode dependent)
-|-
-| $A000-$BFFF || 8KB || Switchable PRG bank (mode dependent)
-|-
-| $C000-$DFFF || 8KB || Switchable PRG bank (mode dependent)
-|-
-| $E000-$FFFF || 8KB || Fixed to last bank (Bank 31)
+|  Header  ||  16 bytes (iNES)
 |}
 
 ==Bank Structure==
 
-Dragon Warrior IV uses 32 banks of 16KB PRG ROM.
-
-{| class="wikitable sortable"
-|-
-! Bank !! File Offset !! CPU Address !! Description !! Subroutines
-|-
-| Bank 00 || $00010-$04010 || $8000-$BFFF || Map/world data || 22
-|-
-| Bank 01 || $04010-$08010 || $8000-$BFFF || Map/world data || 17
-|-
-| Bank 02 || $08010-$0C010 || $8000-$BFFF || Map/world data || 16
-|-
-| Bank 03 || $0C010-$10010 || $8000-$BFFF || Map/world data || 14
-|-
-| Bank 04 || $10010-$14010 || $8000-$BFFF || Graphics data || 22
-|-
-| Bank 05 || $14010-$18010 || $8000-$BFFF || Graphics data || 12
-|-
-| Bank 06 || $18010-$1C010 || $8000-$BFFF || Monster table, sprites || 57
-|-
-| Bank 07 || $1C010-$20010 || $8000-$BFFF || Monster data || 75
-|-
-| Bank 08 || $20010-$24010 || $8000-$BFFF || Monster data || 76
-|-
-| Bank 09 || $24010-$28010 || $8000-$BFFF || Audio/music || 48
-|-
-| Bank 10 || $28010-$2C010 || $8000-$BFFF || Audio/music || 46
-|-
-| Bank 11 || $2C010-$30010 || $8000-$BFFF || Audio/music || 37
-|-
-| Bank 12 || $30010-$34010 || $8000-$BFFF || Text/dialog || 50
-|-
-| Bank 13 || $34010-$38010 || $8000-$BFFF || Text/dialog || 39
-|-
-| Bank 14 || $38010-$3C010 || $8000-$BFFF || Text/dialog || 47
-|-
-| Bank 15 || $3C010-$40010 || $8000-$BFFF || Battle system || 282
-|-
-| Bank 16 || $40010-$44010 || $8000-$BFFF || Battle system || 203
-|-
-| Bank 17 || $44010-$48010 || $8000-$BFFF || Menu system || 236
-|-
-| Bank 18 || $48010-$4C010 || $8000-$BFFF || Shop/item system || 206
-|-
-| Bank 19 || $4C010-$50010 || $8000-$BFFF || '''Battle AI/Tactics''' || 284
-|-
-| Bank 20 || $50010-$54010 || $8000-$BFFF || World map system || 194
-|-
-| Bank 21 || $54010-$58010 || $8000-$BFFF || NPC/event system || 185
-|-
-| Bank 22 || $58010-$5C010 || $8000-$BFFF || Event scripting || 232
-|-
-| Bank 23 || $5C010-$60010 || $8000-$BFFF || Event scripting || 203
-|-
-| Bank 24 || $60010-$64010 || $8000-$BFFF || Save system || 117
-|-
-| Bank 25 || $64010-$68010 || $8000-$BFFF || Compression || 29
-|-
-| Bank 26 || $68010-$6C010 || $8000-$BFFF || Data tables || 19
-|-
-| Bank 27 || $6C010-$70010 || $8000-$BFFF || Experience/level system || 207
-|-
-| Bank 28 || $70010-$74010 || $8000-$BFFF || Character stats || 123
-|-
-| Bank 29 || $74010-$78010 || $8000-$BFFF || Equipment system || 207
-|-
-| Bank 30 || $78010-$7C010 || $8000-$BFFF || Core routines || 293
-|-
-| Bank 31 || $7C010-$80010 || $C000-$FFFF || '''Fixed bank''' (always loaded) || 239
-|}
-
-==Bank Details==
-
-===Bank 06 - Monster Table===
-
-Contains the main monster definition table starting at $18010.
+Dragon Warrior IV uses the MMC5 mapper with 32 banks of 16KB PRG ROM ($20000 bytes each).
 
 {| class="wikitable"
 |-
-! Offset !! Description
+!  Bank  !!  File Offset  !!  CPU Address  !!  Description  !!  Subroutines
 |-
-| $18010 || Monster sprite data
+|  Bank 00  ||  $00010-$04010  ||  $8000-$bfff  ||  Map/world data  ||  22
 |-
-| $18800 || Monster stat table
+|  Bank 01  ||  $04010-$08010  ||  $8000-$bfff  ||  Map/world data  ||  17
 |-
-| $19000 || Monster attack patterns
+|  Bank 02  ||  $08010-$0c010  ||  $8000-$bfff  ||  Map/world data  ||  16
+|-
+|  Bank 03  ||  $0c010-$10010  ||  $8000-$bfff  ||  Map/world data  ||  14
+|-
+|  Bank 04  ||  $10010-$14010  ||  $8000-$bfff  ||  Graphics data  ||  22
+|-
+|  Bank 05  ||  $14010-$18010  ||  $8000-$bfff  ||  Graphics data  ||  12
+|-
+|  Bank 06  ||  $18010-$1c010  ||  $8000-$bfff  ||  Monster table, sprites  ||  57
+|-
+|  Bank 07  ||  $1c010-$20010  ||  $8000-$bfff  ||  Monster data  ||  75
+|-
+|  Bank 08  ||  $20010-$24010  ||  $8000-$bfff  ||  Monster data  ||  76
+|-
+|  Bank 09  ||  $24010-$28010  ||  $8000-$bfff  ||  Audio/music  ||  48
+|-
+|  Bank 10  ||  $28010-$2c010  ||  $8000-$bfff  ||  Audio/music  ||  46
+|-
+|  Bank 11  ||  $2c010-$30010  ||  $8000-$bfff  ||  Audio/music  ||  37
+|-
+|  Bank 12  ||  $30010-$34010  ||  $8000-$bfff  ||  Text/dialog  ||  50
+|-
+|  Bank 13  ||  $34010-$38010  ||  $8000-$bfff  ||  Text/dialog  ||  39
+|-
+|  Bank 14  ||  $38010-$3c010  ||  $8000-$bfff  ||  Text/dialog  ||  47
+|-
+|  Bank 15  ||  $3c010-$40010  ||  $8000-$bfff  ||  Battle system  ||  282
+|-
+|  Bank 16  ||  $40010-$44010  ||  $8000-$bfff  ||  Battle system  ||  203
+|-
+|  Bank 17  ||  $44010-$48010  ||  $8000-$bfff  ||  Menu system  ||  236
+|-
+|  Bank 18  ||  $48010-$4c010  ||  $8000-$bfff  ||  Shop/item system  ||  206
+|-
+|  Bank 19  ||  $4c010-$50010  ||  $8000-$bfff  ||  '''Battle AI/Tactics'''  ||  284
+|-
+|  Bank 20  ||  $50010-$54010  ||  $8000-$bfff  ||  World map system  ||  194
+|-
+|  Bank 21  ||  $54010-$58010  ||  $8000-$bfff  ||  NPC/event system  ||  185
+|-
+|  Bank 22  ||  $58010-$5c010  ||  $8000-$bfff  ||  Event scripting  ||  232
+|-
+|  Bank 23  ||  $5c010-$60010  ||  $8000-$bfff  ||  Event scripting  ||  203
+|-
+|  Bank 24  ||  $60010-$64010  ||  $8000-$bfff  ||  Save system  ||  117
+|-
+|  Bank 25  ||  $64010-$68010  ||  $8000-$bfff  ||  Compression  ||  29
+|-
+|  Bank 26  ||  $68010-$6c010  ||  $8000-$bfff  ||  Data tables  ||  19
+|-
+|  Bank 27  ||  $6c010-$70010  ||  $8000-$bfff  ||  Experience/level system  ||  207
+|-
+|  Bank 28  ||  $70010-$74010  ||  $8000-$bfff  ||  Character stats  ||  123
+|-
+|  Bank 29  ||  $74010-$78010  ||  $8000-$bfff  ||  Equipment system  ||  207
+|-
+|  Bank 30  ||  $78010-$7c010  ||  $8000-$bfff  ||  Core routines  ||  293
+|-
+|  Bank 31  ||  $7c010-$80010  ||  $c000-$ffff  ||  '''Fixed bank'''  ||  239
 |}
 
-===Bank 19 - Battle AI System===
+==Bank 19 - Battle AI and Tactics System==
 
-The party AI and tactics system resides in Bank 19. This is one of the most complex banks in the game.
+Bank 19 ($4c010-$50010) contains the battle AI and tactics system.
+
+===Tactics Tables===
 
 {| class="wikitable"
 |-
-! Offset !! Description
+!  Address  !!  Size  !!  Description
 |-
-| $4C010 || AI decision tree entry
+|  $ba74  ||  49 bytes  ||  Primary tactics/spell priority matrix (7×7)
 |-
-| $4C100 || Tactic handlers
+|  $baa5  ||  48 bytes  ||  Secondary tactics/spell data
 |-
-| $4C400 || Spell selection logic
+|  $bad5  ||  18 bytes  ||  Tertiary tactics data
 |-
-| $4C800 || Target selection
+|  $bb3f  ||  9 bytes  ||  Spell power table
+|-
+|  $bb49  ||  9 bytes  ||  Spell attribute table
+|-
+|  $bb84  ||  7 bytes  ||  Attack multiplier by tactics (one per tactic)
+|-
+|  $bb8b  ||  7 bytes  ||  Stat divisor/multiplier by tactics
+|-
+|  $bb92  ||  7 bytes  ||  Hit threshold by tactics
 |}
 
-===Bank 27 - Experience System===
-
-Contains experience tables and level-up logic.
+===Key Subroutines===
 
 {| class="wikitable"
 |-
-! Offset !! Size !! Description
+!  Address  !!  Name  !!  Description
 |-
-| $6C010 || ~$200 || Experience threshold tables (per character)
+|  $8038  ||  battle_entry  ||  Main battle entry point
 |-
-| $6C210 || ~$100 || Stat growth tables
+|  $8088  ||  read_tactics  ||  Read current tactics setting from $615b
 |-
-| $6C310 || ~$100 || Spell learning tables
+|  $8176  ||  mul16  ||  16-bit multiply by 16
+|-
+|  $8187  ||  div16  ||  16-bit divide by 16
+|-
+|  $9212  ||  sum_party_stats  ||  Calculate party stat totals
+|-
+|  $805b  ||  dispatch_action  ||  Execute battle action based on tactics
 |}
 
-===Bank 31 - Fixed Bank===
+==Bank 31 - Fixed Bank==
 
-Always mapped to $C000-$FFFF. Contains:
-* Interrupt vectors (NMI, IRQ, Reset)
-* Core game loop
-* Bank switching routines
-* Common subroutines called from all banks
+Bank 31 ($7c010-$80010) is the fixed bank, always mapped to $c000-$ffff.
+
+===Interrupt Vectors===
 
 {| class="wikitable"
 |-
-! Address !! Description
+!  Address  !!  Description
 |-
-| $FFFA || NMI Vector
+|  $fffa  ||  NMI vector
 |-
-| $FFFC || Reset Vector
+|  $fffc  ||  Reset vector
 |-
-| $FFFE || IRQ Vector
+|  $fffe  ||  IRQ/BRK vector
 |}
 
-==Data Tables==
-
-===Monster Data (Bank 06-08)===
+===Party Data Access Routines===
 
 {| class="wikitable"
 |-
-! Offset !! Size !! Description
+!  Address  !!  Description  !!  RAM Access
 |-
-| $18800 || 8 bytes/entry || Monster base stats
+|  $cc16  ||  Check party limit X  ||  $6197
 |-
-| $19000 || 4 bytes/entry || Monster attack patterns
+|  $cc1d  ||  Check party limit Y  ||  $6198
 |-
-| $19400 || 2 bytes/entry || Monster sprite pointers
+|  $cc28  ||  Get current chapter  ||  $615a
+|-
+|  $f148  ||  Read chapter number  ||  $615a
+|-
+|  $f164  ||  Increment chapter  ||  $615a
+|-
+|  $f173  ||  Decrement chapter  ||  $615a
 |}
 
-===Item Data (Bank 26)===
+==Bank 06 - Monster Data==
+
+Bank 06 ($18010-$1c010) contains monster sprites and data tables.
+
+===Monster Table===
 
 {| class="wikitable"
 |-
-! Offset !! Size !! Description
+!  Offset  !!  Size  !!  Description
 |-
-| $68100 || 4 bytes/entry || Weapon stats
+|  $8000  ||  varies  ||  Monster sprite data
 |-
-| $68200 || 4 bytes/entry || Armor stats
-|-
-| $68300 || 2 bytes/entry || Item effects
+|  $9000  ||  varies  ||  Monster stat table
 |}
 
-===Text Data (Banks 12-14)===
+==CHR ROM==
 
-Compressed text using a custom DTE (Dual Tile Encoding) scheme.
+The CHR ROM contains pattern table data for graphics.
 
 {| class="wikitable"
 |-
-! Bank !! Content
+!  Offset  !!  Size  !!  Description
 |-
-| Bank 12 || NPC dialog, town names
+|  $80010-$84010  ||  16KB  ||  CHR Bank 0 - Title screen graphics
 |-
-| Bank 13 || Battle messages, item names
+|  $84010-$88010  ||  16KB  ||  CHR Bank 1 - Overworld tiles
 |-
-| Bank 14 || Story text, chapter intros
+|  $88010-$8c010  ||  16KB  ||  CHR Bank 2 - Town/dungeon tiles
+|-
+|  $8c010-$90010  ||  16KB  ||  CHR Bank 3 - Character sprites
+|-
+|  $90010-$94010  ||  16KB  ||  CHR Bank 4 - Monster sprites
+|-
+|  $94010-$98010  ||  16KB  ||  CHR Bank 5 - Battle backgrounds
+|-
+|  $98010-$9c010  ||  16KB  ||  CHR Bank 6 - Menu/UI graphics
+|-
+|  $9c010-$a0010  ||  16KB  ||  CHR Bank 7 - Font and text
+|-
+|  ... ||  ...  ||  Additional CHR banks
 |}
 
 ==See Also==
 
 * [[Dragon Warrior IV (NES)/RAM map|RAM Map]]
-* [[Dragon Warrior IV (NES)/Values|Values Tables]]
+* [[Dragon Warrior IV (NES)/SRAM map|SRAM Map]]
 * [[Dragon Warrior IV (NES)/TBL|Text Table]]
+* [[Dragon Warrior IV (NES)/Values|Game Values]]
 
-[[Category:ROM Maps]]
-[[Category:Dragon Warrior IV (NES)]]
-[[Category:NES Games]]
+==External Links==
+
+* [https://github.com/TheAnsarya/dragon-warrior-4-info Dragon Warrior 4 Info Repository]
+
+[[Category:NES ROM maps]]
