feat: migrate wiki docs to Wiki folder and add templates
- Create known_dumps and dump templates for ROM listings
- Add .cspell.json spelling configuration
- Migrate wiki files for:
  - Chrono Trigger (SNES): RAM_Map, ROM_Map, TBL
  - Dragon Warrior (NES): Graphics_Data, Music_Pointers
  - Dragon Warrior II (NES): RAM_Map, ROM_Map, TBL
  - Dragon Warrior III (NES): RAM_Map, ROM_Map, TBL, Values
  - Dragon Quest III (SNES): all wiki files removed
- Update index files with new link format
- Add Known Dumps template to DQ3, DW2, DW3, DW4 indexes
- Remove source wiki files from Games folder after migration

--- a/Wiki/NES/Dragon_Warrior/Graphics_Data.wikitext
+++ b/Wiki/NES/Dragon_Warrior/Graphics_Data.wikitext
@@ -212,10 +212,9 @@ When extracting graphics from Dragon Warrior:
 * Items/UI use Menu Palette (ID 4)
 * Background tiles use context-specific palettes
 
-=References=
+=See Also=
 
-* Dragon Warrior complete disassembly
-* NES PPU documentation  
-* CHR ROM structure analysis
-* Graphics extraction tools by TheAnsarya
-* [https://hexed.it/ HexEd.it] - Browser-based hex editor for CHR ROM and graphics data editing
+* [[Dragon Warrior:ROM_Map|ROM Map]]
+* [[Dragon Warrior:RAM_Map|RAM Map]]
+
+[[Category:Dragon Warrior|Graphics Data]]
